# media_manager

media_file_manager/: .gitignore  TESTING_GUIDE.md  demo_audio_processing.py  interactive_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_audio_file.py  test_audio_simple.py
media_file_manager/config/: default_config.yaml  user_config.yaml
media_file_manager/src/: main.py  setup.py
media_file_manager/src/cli/: commands.py  interface.py
media_file_manager/src/core/: file_processor.py  file_renamer.py  metadata_handler.py  validator.py
media_file_manager/src/media/: audio_processor.py  format_detector.py  video_processor.py
media_file_manager/src/utils/: backup.py  config.py  file_utils.py  logger.py
media_file_manager/tests/test_media/: test_audio_processor.py  test_video_processor.py
prds/: Media_File_Manager_PRD.md  enhanced_metadata_integration.md  implementation_roadmap.md  project_structure.md  summary_prd_01.md
